--- a/package.json
+++ b/package.json
@@ -13,11 +13,14 @@
     "axios": "^1.2.2",
     "cheerio": "^1.0.0-rc.12",
     "cors": "^2.8.5",
-    "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "helmet": "^7.0.0",
     "mongoose": "^6.8.3",
     "node-cron": "^3.0.2",
+    "string-similarity": "^4.0.4",
     "winston": "^3.8.2"
+  },
+  "devDependencies": {
+    "dotenv": "^16.0.3"
   }
 }
